uptime-kuma/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  ipFamilies:
    - IPv6
    - IPv4
  ipFamilyPolicy: RequireDualStack
  selector:
    app: uptime-kuma
  ports:
  - port: 80
    targetPort: 3001
